# django-boilerplate

./: .env  .gitignore  .pre-commit-config.yaml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: check.yml
app/: manage.py
app/core/: settings.py
app/pages/: admin.py  apps.py  models.py  tests.py  views.py
boilerplate/: db.sqlite3  manage.py
boilerplate/boilerplate/: asgi.py  settings.py  urls.py  wsgi.py
docs/: README.md  first_commit
tests/: test_admin_page.py  test_auth_models_user.py  test_dummy.py
